--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -1,5 +1,5 @@
 - name: Core
-  intro: Python libraries on which other higher-level libraries are built.
+  intro: Python libraries on which multiple higher-level libraries are built.
   packages:
 
     - repo: matplotlib/matplotlib
@@ -19,7 +19,7 @@
       badges: circleci, pypi, conda, site
 
 - name: High-Level Shared API
-  intro: Libraries sharing the Pandas .plot() API.
+  intro: Libraries sharing the Pandas .plot() API, built upon the core Python or JS libraries.
   packages:
 
     - repo: pandas-dev/pandas
@@ -33,6 +33,10 @@
       site: https://xarray.pydata.org
       badges: travis, appveyor, coveralls, rtd, pypi, conda, site
 
+    - repo: santosjorge/cufflinks
+      site: https://github.com/santosjorge/cufflinks/blob/master/README.md
+      badges: circleci, pypi, site
+
     - repo: pyviz/hvplot
       sponsors: [anaconda]
       site: https://hvplot.pyviz.org
@@ -42,16 +46,12 @@
       site: https://github.com/PatrikHlobil/Pandas-Bokeh/blob/master/README.md
       badges: pypi, site
 
-    - repo: santosjorge/cufflinks
-      site: https://github.com/santosjorge/cufflinks/blob/master/README.md
-      badges: circleci, pypi, site
-
     - repo: altair-viz/pdvega
       site: https://altair-viz.github.io/pdvega
       badges: travis, pypi, site
 
 - name: High-Level
-  intro: Libraries focusing on high-level operations for working with data visually, built upon the core libraries.
+  intro: Libraries focusing on high-level operations for working with data visually, built upon the core Python or JS libraries.
   packages:
 
     - repo: mwaskom/seaborn
@@ -68,79 +68,64 @@
       appveyor_project: pyviz/holoviews-ginxt
       badges: travis, appveyor, coveralls, pypi, conda, site
 
+    - repo: plotly/plotly_express
+      sponsors: [plotly]
+      site: https://plotly.express
+      badges: pypi, site
+
     - repo: spotify/chartify
       sponsors: [spotify]
       conda_channel: conda-forge
       site: https://github.com/spotify/chartify/blob/master/README.rst
       badges: travis, pypi, conda, site
 
-    - repo: plotly/plotly_express
-      sponsors: [plotly]
-      site: https://plotly.express
-      badges: pypi, site
-
-- name: Other plotting libraries
-  intro: Plotting libraries not fitting into other categories above.
+- name: Native-GUI
+  intro: Libraries targetting native-desktop GUI interfaces for interactive plots (plus Matplotlib in core above).
   packages:
 
-    - repo: bloomberg/bqplot
-      conda_channel: conda-forge
-      badges: pypi, conda, rtd
-
-    - repo: has2k1/plotnine
-      conda_channel: conda-forge
-      badges: pypi, conda, rtd
-
-    - repo: veusz/veusz
-      conda_channel: conda-forge
-      site: https://veusz.github.io
-
-    - repo: sciapp/gr
-      site: https://gr-framework.org/python.html
-      badges: pypi, site
-
-    - repo: Kozea/pygal
-      conda_channel: conda-forge
+    - repo: pyqtgraph/pyqtgraph
+      site: http://www.pyqtgraph.org
 
     - repo: glue-viz/glue
       site: http://docs.glueviz.org
       badges: pypi, site
-
-    - repo: sandialabs/toyplot
-      sponsors: [sandia]
-      badges: pypi, rtd
 
     - repo: enthought/chaco
       sponsors: [enthought]
       site: https://docs.enthought.com/chaco
       badges: pypi
 
-    - repo: pyqtgraph/pyqtgraph
-      site: http://www.pyqtgraph.org
+    - repo: sciapp/gr
+      site: https://gr-framework.org/python.html
+      badges: pypi, site
+
+    - repo: veusz/veusz
+      conda_channel: conda-forge
+      site: https://veusz.github.io
+
+- name: Other InfoVis
+  intro: InfoVis plotting libraries not fitting into other categories above.
+  packages:
+
+
+    - repo: Kozea/pygal
+      conda_channel: conda-forge
+
+    - repo: has2k1/plotnine
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: bloomberg/bqplot
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: sandialabs/toyplot
+      sponsors: [sandia]
+      badges: pypi, rtd
 
     - repo: biggles-plot/biggles
       site: https://biggles-plot.github.io
       badges: pypi
-
-- name: Dashboarding
-  intro: Libraries for creating live Python-backed web applications or dashboards that a user can interact with to explore or analyze data.
-  packages:
-
-    - repo: plotly/dash
-      sponsors: [plotly]
-      conda_channel: conda-forge
-      site: https://dash.plot.ly
-      badges: circleci, pypi, conda, site
-
-    - repo: pyviz/panel
-      sponsors: [anaconda]
-      site: https://panel.pyviz.org
-      badges: travis, appveyor, codecov, pypi, conda, site
-
-    - repo: QuantStack/voila
-      sponsors: [quantstack]
-      conda_channel: conda-forge
-      badges: travis, pypi, conda, rtd
 
 - name: SciVis
   intro: Libraries for visualizing scientific data situated in real-world coordinates, typically using OpenGL.
@@ -165,9 +150,6 @@
       site: http://vispy.org
       badges: travis, appveyor, coveralls, pypi, conda, site
 
-    - repo: glumpy/glumpy
-      badges: pypi, rtd
-
     - repo: enthought/mayavi
       sponsors: [enthought]
       site: https://docs.enthought.com/mayavi/mayavi
@@ -176,6 +158,82 @@
 
     - repo: maartenbreddels/ipyvolume
       conda_channel: conda-forge
+
+    - repo: glumpy/glumpy
+      badges: pypi, rtd
+
+- name: Geospatial
+  intro: Tools for working with data in geographic coordinates
+  packages:
+
+    - repo: python-visualization/folium
+      conda_channel: conda-forge
+
+    - repo: SciTools/cartopy
+      sponsors: [metoffice]
+      site: https://scitools.org.uk/cartopy
+      badges: travis, appveyor, coveralls, pypi, conda, site
+
+    - repo: jupyter-widgets/ipyleaflet
+      conda_channel: conda-forge
+      badges: pypi, conda, rtd
+
+    - repo: pyviz/geoviews
+      sponsors: [anaconda]
+      site: http://geoviews.org
+      badges: travis, appveyor, pypi, conda, site
+
+    - repo: andrea-cuttone/geoplotlib
+      site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
+      badges: pypi
+
+- name: Other domain-specific
+  intro: Tools focused on specific research or application areas other than those above.
+  packages:
+
+    - repo: networkx/networkx
+      site: https://networkx.github.io
+      appveyor_project: dschult/networkx-pqott
+      badges: travis, appveyor, codecov, pypi, conda, site
+
+    - repo: scikit-image/scikit-image
+      site: https://scikit-image.org
+      badges: travis, appveyor, codecov, pypi, conda, site
+
+    - repo: ResidentMario/missingno
+      conda_channel: conda-forge
+
+    - repo: DistrictDataLabs/yellowbrick
+      site: https://www.scikit-yb.org
+      badges: pypi, site
+
+    - repo: yt-project/yt
+      sponsors: [numfocus]
+      site: https://yt-project.org
+      badges: travis, codecov, pypi, conda, site
+
+    - repo: ContextLab/hypertools
+      badges: pypi, rtd
+
+- name: Dashboarding
+  intro: Libraries for creating live Python-backed web applications or dashboards that a user can interact with to explore or analyze data.
+  packages:
+
+    - repo: plotly/dash
+      sponsors: [plotly]
+      conda_channel: conda-forge
+      site: https://dash.plot.ly
+      badges: circleci, pypi, conda, site
+
+    - repo: pyviz/panel
+      sponsors: [anaconda]
+      site: https://panel.pyviz.org
+      badges: travis, appveyor, codecov, pypi, conda, site
+
+    - repo: QuantStack/voila
+      sponsors: [quantstack]
+      conda_channel: conda-forge
+      badges: travis, pypi, conda, rtd
 
 - name: Colormapping
   intro: Collections of colormaps and tools for generating new colormaps.
@@ -196,59 +254,6 @@
       badges: travis, codecov, pypi, conda
 
 
-- name: Geospatial
-  intro: Tools for working with data in geographic coordinates
-  packages:
-
-    - repo: SciTools/cartopy
-      sponsors: [metoffice]
-      site: https://scitools.org.uk/cartopy
-      badges: travis, appveyor, coveralls, pypi, conda, site
-
-    - repo: pyviz/geoviews
-      sponsors: [anaconda]
-      site: http://geoviews.org
-      badges: travis, appveyor, pypi, conda, site
-
-    - repo: python-visualization/folium
-      conda_channel: conda-forge
-
-    - repo: jupyter-widgets/ipyleaflet
-      conda_channel: conda-forge
-      badges: pypi, conda, rtd
-
-    - repo: andrea-cuttone/geoplotlib
-      site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
-      badges: pypi
-
-- name: Domain-specific
-  intro: Tools focused on specific research or application areas.
-  packages:
-
-    - repo: networkx/networkx
-      site: https://networkx.github.io
-      appveyor_project: dschult/networkx-pqott
-      badges: travis, appveyor, codecov, pypi, conda, site
-
-    - repo: scikit-image/scikit-image
-      site: https://scikit-image.org
-      badges: travis, appveyor, codecov, pypi, conda, site
-
-    - repo: yt-project/yt
-      sponsors: [numfocus]
-      site: https://yt-project.org
-      badges: travis, codecov, pypi, conda, site
-
-    - repo: DistrictDataLabs/yellowbrick
-      site: https://www.scikit-yb.org
-      badges: pypi, site
-
-    - repo: ContextLab/hypertools
-      badges: pypi, rtd
-
-    - repo: ResidentMario/missingno
-      conda_channel: conda-forge
-
 - name: Large-data rendering
   intro: Tools for server-side rasterizing/aggregating data before visualization.
   packages:
@@ -266,53 +271,53 @@
 
 
 - name: Dormant projects
-  intro: Tools no longer developed or endorsed by the authors
+  intro: Tools no longer developed or endorsed by the authors.
   packages:
-
-    - repo: lightning-viz/lightning
-      site: http://lightning-viz.org
-      dormant: https://gitter.im/lightning-viz/lightning
-      badges: pypi, dormant
-
-    - repo: wrobstory/vincent
-      dormant: https://github.com/wrobstory/vincent/graphs/contributors
-      badges: pypi, rtd
-
-    - repo: wireservice/leather
-      dormant: https://github.com/wireservice/leather/graphs/contributors
-      badges: pypi, rtd
-
-    - repo: almarklein/visvis
-      dormant: https://github.com/almarklein/visvis#status
-
-    - repo: mpld3/mpld3
-      site: https://mpld3.github.io
-      dormant: http://www.xavierdupre.fr/app/pymyinstall/helpsphinx/blog/2017/2017-09-02_mpld3.html
 
     - repo: matplotlib/basemap
       site: https://matplotlib.org/basemap
       dormant: https://matplotlib.org/basemap/users/intro.html#cartopy-new-management-and-eol-announcement
-
-    - repo: rossant/galry
-      dormant: https://github.com/rossant/galry/blob/master/README.md
-      badges: pypi, dormant
 
     - repo: adrn/d3po
       site: https://d3po.org
       dormant: https://github.com/adrn/d3po/graphs/contributors
       badges: site, dormant
 
+    - repo: rossant/galry
+      dormant: https://github.com/rossant/galry/blob/master/README.md
+      badges: pypi, dormant
+
     - repo: yhat/ggpy
       site: http://ggplot.yhathq.com
       badges: pypi, site
       dormant: https://github.com/yhat/ggpy/graphs/contributors
+
+    - repo: dgrtwo/gleam
+      dormant: https://github.com/dgrtwo/gleam/graphs/contributors
+      badges: pypi, dormant
+
+    - repo: wireservice/leather
+      dormant: https://github.com/wireservice/leather/graphs/contributors
+      badges: pypi, rtd
+
+    - repo: lightning-viz/lightning
+      site: http://lightning-viz.org
+      dormant: https://gitter.im/lightning-viz/lightning
+      badges: pypi, dormant
+
+    - repo: mpld3/mpld3
+      site: https://mpld3.github.io
+      dormant: http://www.xavierdupre.fr/app/pymyinstall/helpsphinx/blog/2017/2017-09-02_mpld3.html
 
     - repo: PyQwt/PyQwt
       site: http://www.pyqtgraph.org
       dormant: https://github.com/PyQwt
       badges: site
 
-    - repo: dgrtwo/gleam
-      dormant: https://github.com/dgrtwo/gleam/graphs/contributors
-      badges: pypi, dormant
+    - repo: wrobstory/vincent
+      dormant: https://github.com/wrobstory/vincent/graphs/contributors
+      badges: pypi, rtd
+
+    - repo: almarklein/visvis
+      dormant: https://github.com/almarklein/visvis#status
 
